--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "description": "",
   "devDependencies": {
-    "vitepress": "^1.5.0"
+    "sass": "^1.82.0",
+    "vitepress": "^1.5.0",
+    "vitepress-sidebar": "^1.29.0"
+  },
+  "dependencies": {
+    "vue-use-spring": "^0.3.3"
   }
 }
